--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "hubot-redis-brain": "0.0.2",
     "hubot-scripts": "~2.5.16",
     "hubot-slack": "~3.1.0",
-    "hubot": "~2.10.0"
+    "hubot": "~2.10.0",
+    "cron": "~1.0.6"
   },
   "engines": {
     "node": "0.10.x"
