--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "hubot-scripts": "~2.5.16",
     "hubot-slack": "~3.1.0",
     "hubot": "~2.10.0",
-    "cron": "~1.0.6"
+    "cron": "~1.0.6",
+    "time": "~0.11.0"
   },
   "engines": {
     "node": "0.10.x"
